force-app/main/default/objects/Document_Validation__mdt/Document_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Document Validation</label>
    <pluralLabel>Document Validations</pluralLabel>
</CustomObject>