force-app/main/default/objects/Document_Validation__mdt/fields/Check_Only__c.field-meta.xml
<CustomField>
    <fullName>Check_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Only</label>
    <type>Checkbox</type>
</CustomField>