force-app/main/default/objects/Document_Validation__mdt/fields/Document_Structure__c.field-meta.xml
<CustomField>
    <fullName>Document_Structure__c</fullName>
    <label>Document Structure</label>
    <referenceTo>Document_Structure__mdt</referenceTo>
    <relationshipLabel>Document Validations</relationshipLabel>
    <relationshipName>Document_Validations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>