force-app/main/default/objects/Document_Validation__mdt/fields/Section_Header_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Header_Label__c</fullName>
    <label>Section Header Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>