force-app/main/default/objects/Document_Validation__mdt/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObjectName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan_Version__c</fullName>
                <default>true</default>
                <label>Loan_Version__c</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>