force-app/main/default/objects/Document_Validation__mdt/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <label>Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>