force-app/main/default/objects/Document_Validation__mdt/listViews/All_Bridge.listView-meta.xml
<ListView>
    <fullName>All_Bridge</fullName>
    <columns>Document_Structure__c</columns>
    <columns>Sort__c</columns>
    <columns>MasterLabel</columns>
    <columns>Check_Only__c</columns>
    <columns>Field_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>Filters__c</columns>
    <columns>sObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sObjectName__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Bridge</value>
    </filters>
    <label>All Bridge</label>
</ListView>