force-app/main/default/objects/Document_Validation__mdt/listViews/All_Term.listView-meta.xml
<ListView>
    <fullName>All_Term</fullName>
    <columns>Sort__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Filters__c</columns>
    <columns>Document_Structure__c</columns>
    <columns>sObjectName__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sObjectName__c</field>
        <operation>equals</operation>
        <value>Loan_Version__c</value>
    </filters>
    <label>All Term</label>
</ListView>